# BITSER

./: .gitignore  README.md  build.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
bitser/: __init__.py  cli.py  data_preprocessing.py  feature_extraction.py  file_utils.py  genetic_texture_analysis.pyx  genetic_utils.h  main.py  model_training.py  sequence_utils.py
data_sarscov2/train/: Alpha.fasta  Beta.fasta  Delta.fasta  Gamma.fasta  Omicron.fasta
tests/: test_cli.py  test_data_preprocessing.py  test_feature_extraction.py  test_file_utils.py  test_model_training.py  test_sequence_utils.py
